--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "dependencies": {},
   "scripts": {
-    "test": "jest --watchAll"
+    "tests": "jest --watchAll",
+    "test": "jest  scripts/pizzabot.test.js --watch",
+    "test-oop": "jest scripts/pizzabot_oop.test.js --watch"
   },
   "devDependencies": {
     "jest": "^22.4.3"
